# Arieo-Bootstrap

./: ArieoPackage.yaml  CMakeLists.txt  arieo_package.json
bootstrap/: CMakeLists.txt
bootstrap/private/js/: pre.js
bootstrap/private/src/: bootstrap_engine.cpp  bootstrap_engine.h  main.android.cpp  main.cpp  main.emscripten.cpp
bootstrap_android/: CMakeLists.txt  gradle.properties  settings.gradle.kts
bootstrap_android/app/: build.gradle.kts
bootstrap_android/app/src/main/: AndroidManifest.xml
bootstrap_android/app/src/main/assets/js/: manifestHandler.js
bootstrap_android/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt
bootstrap_android/app/src/main/java/com/arieo/bootstrap/: MainActivity.java
bootstrap_android/app/src/main/res/values/: strings.xml
bootstrap_execute/: CMakeLists.txt
bootstrap_execute/private/src/: bootstrap.cpp
